--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,1 @@
-find_package(SFML 2.5 COMPONENTS system window graphics network audio REQUIRED)
-
-add_executable(main main.cpp)
-
-target_link_libraries(main sfml-graphics)
+add_subdirectory(game-core)
