--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,23 @@
 cmake_minimum_required(VERSION 3.5)
-
 project(gameX)
 
+set(CMAKE_CXX_STANDARD 20)
+
+find_package(SFML 2.5 COMPONENTS system window graphics network audio REQUIRED)
+
+add_executable(main src/main.cpp)
 add_subdirectory(src)
+
+# add_library(core STATIC build/src/game-core/libSHARED.a)
+
+target_link_libraries(main PUBLIC 
+    sfml-graphics
+    # core
+)
+
+# target_include_directories(main PUBLIC ./include/)
+
+# install(TARGETS
+#     main
+#     DESTINATION lib/${PROJECT_NAME}
+# )
