Fixed CMake config

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,13 +6,18 @@ set(CMAKE_CXX_STANDARD 20)
 find_package(SFML 2.5 COMPONENTS system window graphics network audio REQUIRED)
 
 add_executable(main src/main.cpp)
-add_subdirectory(src)
+add_library(core SHARED 
+    src/game-core/player.hpp
+    src/game-core/player.cpp
+)
+
+
 
 # add_library(core STATIC build/src/game-core/libSHARED.a)
 
 target_link_libraries(main PUBLIC 
     sfml-graphics
-    # core
+    core
 )
 
 # target_include_directories(main PUBLIC ./include/)
